# lucky_ball

./: .gitignore  Cargo.toml  build.webgpu.sh  index.html  readmd.md  readme.md
.github/workflows/: deploy.yml
android/: Cargo.toml  build.rs  build_android.sh
android/android_studio/app/: build.gradle.kts  proguard-rules.pro
android/android_studio/app/src/androidTest/java/xyz/lsy969999/luckyball/: ExampleInstrumentedTest.kt
android/android_studio/app/src/androidTest/java/xyz/lsy969999/myapplication/: ExampleInstrumentedTest.kt
android/android_studio/app/src/main/: AndroidManifest.xml
android/android_studio/app/src/main/java/xyz/lsy969999/luckyball/: MainActivity.kt
android/android_studio/app/src/main/java/xyz/lsy969999/myapplication/: MainActivity.kt
android/android_studio/app/src/main/res/values/: strings.xml
android/android_studio/app/src/test/java/xyz/lsy969999/luckyball/: ExampleUnitTest.kt
android/android_studio/app/src/test/java/xyz/lsy969999/myapplication/: ExampleUnitTest.kt
android/src/: lib.rs
assets/models/: luckyball.glb
ios/: Cargo.toml  build.ios.sh
ios/src/: lib.rs
ios/xcode/ios-src/: Info.plist  lucky ball-Bridging-Header.h  lucky_ball.swift
ios/xcode/lucky ball.xcodeproj/: project.pbxproj
ios/xcode/lucky ball.xcodeproj/xcshareddata/xcschemes/: lucky_ball.xcscheme
ios/xcode/my lucky ball.xcodeproj/: project.pbxproj
ios/xcode/my lucky ball.xcodeproj/xcshareddata/xcschemes/: lucky_ball.xcscheme
src/: lib.rs  main.rs
src/app/: mod.rs  states.rs
src/asset/: mod.rs  resources.rs
src/ffi/: event.rs  ffi_event.rs  ffi_fn.rs  ffi_trait.rs  mod.rs  resource.rs
src/ffi/platform/: android.rs  desktop.rs  ios.rs  mod.rs  wasm.rs
src/firework/: mod.rs
src/game/: component.rs  constant.rs  event.rs  mod.rs  resource.rs  system.rs
src/inspector/: mod.rs
src/ui/: component.rs  constant.rs  event.rs  i18n.rs  mod.rs  resource.rs  system.rs  system_test.rs  utils.rs
wasm_webgl2/: web.js
wasm_webgpu/: web.d.ts  web.js
web/: Cargo.toml  build.webgl2.sh  build.webgpu.sh  index.html
web/wasm_webgpu/: web_bg.wasm.d.ts
