[package]
name = "lucky_ball"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["android", "ios", "web"]

[features]
default = ["inspector"]
inspector = ["bevy-inspector-egui", "iyes_perf_ui"]

[dependencies]
# avian3d = { version = "0.1.2" }
bevy = { version = "0.15.1", features = [
    # "android-game-activity",
    # "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    # "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    # "bevy_render",
    # "bevy_scene",
    # "bevy_sprite",
    # "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    # "custom_cursor",
    "default_font",
    # "hdr",
    "multi_threaded",
    "png",
    # "smaa_luts",
    # "sysinfo_plugin",
    "tonemapping_luts",
    # "vorbis",
    # "webgl2",
    # "x11",
    # /////// optional features ///////
    # "android-native-activity",
    # "trace_tracy", # cargo run --release --features bevy/trace_tracy
    # "trace_tracy_memory", # cargo run --release --features bevy/trace_tracy_memory
], default-features = false }

bevy-inspector-egui = { version = "0.28.0", features = [
    "bevy_render",
], default-features = false, optional = true }
bevy_asset_loader = "0.22.0"
# bevy_color = "0.14.3"
bevy_crossbeam_event = "0.7.0"
# bevy_kira_audio = { version = "0.20.0", features = ["mp3"] }
# bevy_mod_picking = "0.20.1"
bevy_panorbit_camera = "0.21.0"
bevy_tweening = "0.12.0"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main", optional = true }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

uuid = "1.10.0"
chrono = "0.4.38"
bevy_rapier3d = { version = "0.28.0", features = ["simd-stable"] }
# bevy_hanabi = "0.14.0"
# bevy_framepace = "0.17.1"

[target.'cfg(not(any(target_os = "ios", target_os = "android", target_family = "wasm")))'.dependencies]
directories = "5.0.1"

[target.'cfg(target_os = "android")'.dependencies]
jni_fn = "0.1.2"
jni = "0.21.1"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
raw-window-handle = "0.6.0"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2.99"

[patch.crates-io]
winit = { git = "https://github.com/lsy969999/winit.git", branch = "patch-ios-0.30.5" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'         # 최적의 크기 감소를 위한 최적화 (z는 크기 기준, s는 성능 기준)
lto = true              # 'thin'보다 더 높은 수준의 LTO (fat은 더 많은 크기 최적화 제공)
codegen-units = 1       # 코드 생성 단위를 1로 설정하여 최적화
panic = 'abort'         # 패닉 시 스택 추적을 제외하여 크기 감소
debug = false           # 디버그 심볼 제거
overflow-checks = false # 오버플로 체크 제거
strip = true
