[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
webgl2 = ["bevy/webgl2"]
webgpu = ["bevy/webgpu"]

[dependencies]
bevy = { version = "0.15.1", features = [
    # "android_shared_stdcxx",
    # "animation",
    # "bevy_animation",
    # "bevy_asset",
    # "bevy_audio",
    # "bevy_color",
    # "bevy_core_pipeline",
    # "bevy_gilrs",
    # "bevy_gizmos",
    # "bevy_gltf",
    # "bevy_pbr",
    # "bevy_picking",
    # "bevy_render",
    # "bevy_scene",
    # "bevy_sprite",
    # "bevy_state",
    # "bevy_text",
    # "bevy_ui",
    # "bevy_winit",
    # "hdr",
    # "ktx2",
    # "multi_threaded",
    # "png",
    # "smaa_luts",
    # "sysinfo_plugin",
    # "tonemapping_luts",
    # "webgl2",
    # "x11",
    # "zstd",
    # "webgpu",
], default-features = false }
wasm-bindgen = "0.2.93"
lucky_ball = { path = "..", default-features = false }
